gitops/kustomize/smailnail/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smailnail
  labels:
    app.kubernetes.io/name: smailnail
